# MiniRaytrace

./: .clang-format  .gitignore  CMakeLists.txt  PRD.md  README.md
MiniRaytrace.app/Contents/: Info.plist
MiniRaytrace.app/Contents/MacOS/: MiniRaytrace
MiniRaytrace.app/Contents/Resources/: imgui.ini
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/capi/: Makefile  cmake_install.cmake  libmrt.dylib
build-release/core/: Makefile  cmake_install.cmake
build-release/shaders/: pathtrace.spv  resolve.spv
build-release/shaders/include/: pathtrace_spv.h  resolve_spv.h
build-release/viewer/: Makefile  cmake_install.cmake
build-release/viewer/MiniRaytrace.app/Contents/_CodeSignature/: CodeResources
capi/: CMakeLists.txt
capi/include/: mini_raytrace.h
capi/src/: capi.cpp
cmake/: ShaderTools.cmake  Spv2Header.cmake
core/: CMakeLists.txt
core/include/mrt/: Common.hpp  Engine.hpp  MathTypes.hpp  Scene.hpp  SceneTypes.hpp
core/shaders/: bsdf.glsl  common.glsl  intersect.glsl  lights.glsl  pathtrace.comp  random.glsl  resolve.comp
core/src/: Engine.cpp
core/src/accel/: Bvh.cpp  Bvh.hpp
core/src/gpu/: GpuContext.cpp  GpuContext.hpp
core/src/post/: Denoiser.cpp  Denoiser.hpp
core/src/render/: GpuTypes.hpp  Renderer.cpp  Renderer.hpp
core/src/scene/: Scene.cpp
docs/: rhino-integration-design.md
rhino/MiniRaytrace.Rhino/: MiniRaytrace.Rhino.csproj  MiniRaytraceSettingsCommand.cs  MrtRenderPlugIn.cs
rhino/MiniRaytrace.Rhino/ChangeQueue/: CameraSync.cs  ChangeQueueLog.cs  EnvironmentSync.cs  GroundPlaneSync.cs  HandleMaps.cs  LightSync.cs  MaterialSync.cs  MeshSync.cs  MrtChangeQueue.cs  TextureBaker.cs
rhino/MiniRaytrace.Rhino/Interop/: MrtEngine.cs  MrtTypes.cs  NativeMethods.cs
rhino/MiniRaytrace.Rhino/Presentation/: FramePresenter.cs  MrtRenderPipeline.cs
rhino/MiniRaytrace.Rhino/Properties/: AssemblyInfo.cs
rhino/MiniRaytrace.Rhino/Realtime/: MrtRealtimeDisplayMode.cs  MrtRealtimeDisplayModeInfo.cs
rhino/MiniRaytrace.Rhino/Session/: RenderSession.cs
rhino/MiniRaytrace.Rhino/Settings/: MrtRenderSettingsData.cs
rhino/MiniRaytrace.Smoke/: MiniRaytrace.Smoke.csproj  Program.cs
rhino/yak/: build-mac.sh  build-win.ps1  manifest.yml  sign-mac.sh
tests/: CMakeLists.txt  bvh_tests.cpp  camera_tests.cpp  commit_tests.cpp  gpu_selection_tests.cpp  material_texture_tests.cpp  readback_bench_tests.cpp  tiling_regression_tests.cpp
tools/: package_app.sh  sky_gen.py
viewer/: CMakeLists.txt
viewer/packaging/: Info.plist.in
viewer/src/: Gui.cpp  Gui.hpp  ObjLoader.cpp  ObjLoader.hpp  OrbitCamera.hpp  Window.cpp  Window.hpp  main.cpp
